k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aks-demo
  template:
    metadata:
      labels:
        app: aks-demo
    spec:
      containers:
      - name: aks-demo
        image: docker.cloudsmith.io/lp-pc00/learning-demo-cldsmith/aks-demo-img:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Always
      imagePullSecrets:
        - name: cloudsmith-secret
