k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-demo-service
spec:
  selector:
    app: aks-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
  type: NodePort
